--- a/uml-tikz.sty
+++ b/uml-tikz.sty
@@ -29,6 +29,8 @@
 
 \newlength{\umlArrowLength}
 \setlength{\umlArrowLength}{4mm}
+\newlength{\umlMultiplicityDistance}
+\setlength{\umlMultiplicityDistance}{0.3cm}
 \newcommand{\umlArrowStyle}{}
 
 %--The command to create a new class
@@ -145,16 +147,16 @@
 %--comands to create different assoziations
 
 \newcommand{\umlOneOne}[3][]{\umlInitArrowStyle{#1}
-	\draw[\umlArrowStyle] (#2) -- (#3) node [very near start, above] (TextNode) {1} node [very near end, above] (TextNode) {1};}
+	\draw[\umlArrowStyle] (#2) -- (#3) node [very near start, above] (TextNode) [above=\the\umlMultiplicityDistance] {1} node [very near end, above] (TextNode) [above=\the\umlMultiplicityDistance] {1};}
 
 \newcommand{\umlOneN}[3][]{\umlInitArrowStyle{#1}
-	\draw[\umlArrowStyle] (#2) -- (#3) node [very near start, above] (TextNode) {1} node [very near end, above] (TextNode) {*};}
+	\draw[\umlArrowStyle] (#2) -- (#3) node [very near start, above] (TextNode) [above=\the\umlMultiplicityDistance] {1} node [very near end, above] (TextNode) [above=\the\umlMultiplicityDistance] {*};}
 
 \newcommand{\umlNN}[3][]{\umlInitArrowStyle{#1}
-	\draw[\umlArrowStyle] (#2) -- (#3) node [very near start, above] (TextNode) {*} node [very near end, above] (TextNode) {*};}
+	\draw[\umlArrowStyle] (#2) -- (#3) node [very near start, above] (TextNode) [above=\the\umlMultiplicityDistance] {*} node [very near end, above] (TextNode) [above=\the\umlMultiplicityDistance] {*};}
 
 \newcommand{\umlFree}[5][]{\umlInitArrowStyle{#1}
-	\draw[\umlArrowStyle] (#2) -- (#3) node [very near start, above] (TextNode) {#4} node [very near end, above] (TextNode) {#5};}
+	\draw[\umlArrowStyle] (#2) -- (#3) node [very near start, above] (TextNode) [above=\the\umlMultiplicityDistance] {#4} node [very near end, above] (TextNode) [above=\the\umlMultiplicityDistance] {#5};}
 
 \newcommand{\umlSelf}[4][]{\umlInitArrowStyle{#1}
 	\draw[\umlArrowStyle] (#2.east) -- ++ (0.5, 0) node [near start, above] (TextNode) {#3} -- ++ (0,-\csname umlBoxHeight#2\endcsname/2 - 0.5cm) -- ++ (- \csname umlBoxWidth#2\endcsname/2 - 0.5cm, 0) -- (#2.south) node [near end, right] (TextNode) {#4};}
