--- a/uml-tikz.sty
+++ b/uml-tikz.sty
@@ -187,7 +187,7 @@
 	\umlGetAssoziationDifferences{#2\arabic{umlenvironmentcounter}}{#3\arabic{umlenvironmentcounter}}
 %	
 	\ifthenelse{\lengthtest{\umlAssoziationXDiff>\umlAssoziationYDiff}}{
-		\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter}) node [very near start, above] (TextNode) [above=\the\umlMultiplicityDistance] {1} node [very near end, above] (TextNode) [above=\the\umlMultiplicityDistance] {1};
+		\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter}) node [very near start, below] (TextNode) [below=\the\umlMultiplicityDistance] {1} node [very near end, below] (TextNode) [below=\the\umlMultiplicityDistance] {1};
 	}{
 		\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter}) node [very near start, right] (TextNode) [right=\the\umlMultiplicityDistance] {1} node [very near end, right] (TextNode) [right=\the\umlMultiplicityDistance] {1};
 	}
@@ -198,7 +198,7 @@
 	\umlGetAssoziationDifferences{#2\arabic{umlenvironmentcounter}}{#3\arabic{umlenvironmentcounter}}
 	%	
 	\ifthenelse{\lengthtest{\umlAssoziationXDiff>\umlAssoziationYDiff}}{
-		\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter}) node [very near start, above] (TextNode) [above=\the\umlMultiplicityDistance] {1} node [very near end, above] (TextNode) [above=\the\umlMultiplicityDistance] {*};
+		\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter}) node [very near start, below] (TextNode) [below=\the\umlMultiplicityDistance] {1} node [very near end, below] (TextNode) [below=\the\umlMultiplicityDistance] {*};
 	}{
 		\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter}) node [very near start, right] (TextNode) [right=\the\umlMultiplicityDistance] {1} node [very near end, right] (TextNode) [right=\the\umlMultiplicityDistance] {*};
 	}
@@ -209,7 +209,7 @@
 	\umlGetAssoziationDifferences{#2\arabic{umlenvironmentcounter}}{#3\arabic{umlenvironmentcounter}}
 	%	
 	\ifthenelse{\lengthtest{\umlAssoziationXDiff>\umlAssoziationYDiff}}{
-		\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter}) node [very near start, above] (TextNode) [above=\the\umlMultiplicityDistance] {*} node [very near end, above] (TextNode) [above=\the\umlMultiplicityDistance] {*};
+		\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter}) node [very near start, below] (TextNode) [below=\the\umlMultiplicityDistance] {*} node [very near end, below] (TextNode) [below=\the\umlMultiplicityDistance] {*};
 	}{
 		\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter}) node [very near start, right] (TextNode) [right=\the\umlMultiplicityDistance] {*} node [very near end, right] (TextNode) [right=\the\umlMultiplicityDistance] {*};
 	}
@@ -220,14 +220,14 @@
 	\umlGetAssoziationDifferences{#2\arabic{umlenvironmentcounter}}{#3\arabic{umlenvironmentcounter}}
 	%	
 	\ifthenelse{\lengthtest{\umlAssoziationXDiff>\umlAssoziationYDiff}}{
-		\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter}) node [very near start, above] (TextNode) [above=\the\umlMultiplicityDistance] {#4} node [very near end, above] (TextNode) [above=\the\umlMultiplicityDistance] {#5};
+		\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter}) node [very near start, below] (TextNode) [below=\the\umlMultiplicityDistance] {#4} node [very near end, below] (TextNode) [below=\the\umlMultiplicityDistance] {#5};
 	}{
 		\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter}) node [very near start, right] (TextNode) [right=\the\umlMultiplicityDistance] {#4} node [very near end, right] (TextNode) [right=\the\umlMultiplicityDistance] {#5};
 	}
 }
 
 \newcommand{\umlSelf}[4][]{\umlInitArrowStyle{#1}
-	\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}.east) -- ++ (0.5, 0) node [near start, above] (TextNode) {#3} -- ++ (0,-\csname umlBoxHeight#2\arabic{umlenvironmentcounter}\endcsname/2 - 0.5cm) -- ++ (- \csname umlBoxWidth#2\arabic{umlenvironmentcounter}\endcsname/2 - 0.5cm, 0) -- (#2\arabic{umlenvironmentcounter}.south) node [near end, right] (TextNode) {#4};}
+	\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}.east) -- ++ (0.5, 0) node [near start, below] (TextNode) {#3} -- ++ (0,-\csname umlBoxHeight#2\arabic{umlenvironmentcounter}\endcsname/2 - 0.5cm) -- ++ (- \csname umlBoxWidth#2\arabic{umlenvironmentcounter}\endcsname/2 - 0.5cm, 0) -- (#2\arabic{umlenvironmentcounter}.south) node [near end, right] (TextNode) {#4};}
 
 \newcommand{\umlNon}[3][]{\umlInitArrowStyle{#1}
 	\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter});}
