--- a/uml-tikz.sty
+++ b/uml-tikz.sty
@@ -182,36 +182,36 @@
 	\ifthenelse{\lengthtest{\umlAssoziationYDiff<0pt}}{\setlength{\umlAssoziationYDiff}{\the\umlAssoziationTwoY-\the\umlAssoziationOneY}}{}
 }
 
-\newcommand{\umlOneOne}[3][]{%
+\NewDocumentCommand{\umlOneOne}{ O{} O{} O{} m m}{%
 	\umlInitArrowStyle{#1}
-	\umlGetAssoziationDifferences{#2\arabic{umlenvironmentcounter}}{#3\arabic{umlenvironmentcounter}}
+	\umlGetAssoziationDifferences{#4\arabic{umlenvironmentcounter}}{#5\arabic{umlenvironmentcounter}}
 %	
 	\ifthenelse{\lengthtest{\umlAssoziationXDiff>\umlAssoziationYDiff}}{
-		\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter}) node [very near start, below] (TextNode) [below=\the\umlMultiplicityDistance] {1} node [very near end, below] (TextNode) [below=\the\umlMultiplicityDistance] {1};
+		\draw[\umlArrowStyle] (#4\arabic{umlenvironmentcounter}) -- (#5\arabic{umlenvironmentcounter}) node [very near start, below] (TextNode) [below=\the\umlMultiplicityDistance] {1} node [very near start, above] (TextNode) [above=\the\umlMultiplicityDistance] {#2} node [very near end, below] (TextNode) [below=\the\umlMultiplicityDistance] {1} node [very near end, above] (TextNode) [above=\the\umlMultiplicityDistance] {#3};
 	}{
-		\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter}) node [very near start, right] (TextNode) [right=\the\umlMultiplicityDistance] {1} node [very near end, right] (TextNode) [right=\the\umlMultiplicityDistance] {1};
+		\draw[\umlArrowStyle] (#4\arabic{umlenvironmentcounter}) -- (#5\arabic{umlenvironmentcounter}) node [very near start, right] (TextNode) [right=\the\umlMultiplicityDistance] {1} node [very near start, left] (TextNode) [left=\the\umlMultiplicityDistance] {#2} node [very near end, right] (TextNode) [right=\the\umlMultiplicityDistance] {1} node [very near end, left] (TextNode) [left=\the\umlMultiplicityDistance] {#3};
 	}
 }
 
-\newcommand{\umlOneN}[3][]{%
+\NewDocumentCommand{\umlOneN}{ O{} O{} O{} m m}{%
 	\umlInitArrowStyle{#1}
-	\umlGetAssoziationDifferences{#2\arabic{umlenvironmentcounter}}{#3\arabic{umlenvironmentcounter}}
+	\umlGetAssoziationDifferences{#4\arabic{umlenvironmentcounter}}{#5\arabic{umlenvironmentcounter}}
 	%	
 	\ifthenelse{\lengthtest{\umlAssoziationXDiff>\umlAssoziationYDiff}}{
-		\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter}) node [very near start, below] (TextNode) [below=\the\umlMultiplicityDistance] {1} node [very near end, below] (TextNode) [below=\the\umlMultiplicityDistance] {*};
+		\draw[\umlArrowStyle] (#4\arabic{umlenvironmentcounter}) -- (#5\arabic{umlenvironmentcounter}) node [very near start, below] (TextNode) [below=\the\umlMultiplicityDistance] {1} node [very near start, above] (TextNode) [above=\the\umlMultiplicityDistance] {#2} node [very near end, below] (TextNode) [below=\the\umlMultiplicityDistance] {*} node [very near end, above] (TextNode) [above=\the\umlMultiplicityDistance] {#3};
 	}{
-		\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter}) node [very near start, right] (TextNode) [right=\the\umlMultiplicityDistance] {1} node [very near end, right] (TextNode) [right=\the\umlMultiplicityDistance] {*};
+		\draw[\umlArrowStyle] (#4\arabic{umlenvironmentcounter}) -- (#5\arabic{umlenvironmentcounter}) node [very near start, right] (TextNode) [right=\the\umlMultiplicityDistance] {1} node [very near start, left] (TextNode) [left=\the\umlMultiplicityDistance] {#2} node [very near end, right] (TextNode) [right=\the\umlMultiplicityDistance] {*} node [very near start, left] (TextNode) [left=\the\umlMultiplicityDistance] {#3};
 	}
 }
 
-\newcommand{\umlNN}[3][]{%
+\NewDocumentCommand{\umlNN}{ O{} O{} O{} m m}{%
 	\umlInitArrowStyle{#1}
-	\umlGetAssoziationDifferences{#2\arabic{umlenvironmentcounter}}{#3\arabic{umlenvironmentcounter}}
+	\umlGetAssoziationDifferences{#4\arabic{umlenvironmentcounter}}{#5\arabic{umlenvironmentcounter}}
 	%	
 	\ifthenelse{\lengthtest{\umlAssoziationXDiff>\umlAssoziationYDiff}}{
-		\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter}) node [very near start, below] (TextNode) [below=\the\umlMultiplicityDistance] {*} node [very near end, below] (TextNode) [below=\the\umlMultiplicityDistance] {*};
+		\draw[\umlArrowStyle] (#4\arabic{umlenvironmentcounter}) -- (#5\arabic{umlenvironmentcounter}) node [very near start, below] (TextNode) [below=\the\umlMultiplicityDistance] {*} node [very near start, above] (TextNode) [above=\the\umlMultiplicityDistance] {#2} node [very near end, below] (TextNode) [below=\the\umlMultiplicityDistance] {*} node [very near start, above] (TextNode) [above=\the\umlMultiplicityDistance] {#3};
 	}{
-		\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter}) node [very near start, right] (TextNode) [right=\the\umlMultiplicityDistance] {*} node [very near end, right] (TextNode) [right=\the\umlMultiplicityDistance] {*};
+		\draw[\umlArrowStyle] (#4\arabic{umlenvironmentcounter}) -- (#5\arabic{umlenvironmentcounter}) node [very near start, right] (TextNode) [right=\the\umlMultiplicityDistance] {*} node [very near start, left] (TextNode) [left=\the\umlMultiplicityDistance] {#2} node [very near end, right] (TextNode) [right=\the\umlMultiplicityDistance] {*} node [very near end, left] (TextNode) [left=\the\umlMultiplicityDistance] {#3};
 	}
 }
 
@@ -229,5 +229,12 @@
 \newcommand{\umlSelf}[4][]{\umlInitArrowStyle{#1}
 	\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}.east) -- ++ (0.5, 0) node [near start, below] (TextNode) {#3} -- ++ (0,-\csname umlBoxHeight#2\arabic{umlenvironmentcounter}\endcsname/2 - 0.5cm) -- ++ (- \csname umlBoxWidth#2\arabic{umlenvironmentcounter}\endcsname/2 - 0.5cm, 0) -- (#2\arabic{umlenvironmentcounter}.south) node [near end, right] (TextNode) {#4};}
 
-\newcommand{\umlNon}[3][]{\umlInitArrowStyle{#1}
-	\draw[\umlArrowStyle] (#2\arabic{umlenvironmentcounter}) -- (#3\arabic{umlenvironmentcounter});}
+\NewDocumentCommand{\umlNon}{ O{} O{} O{} m m}{%
+	\umlInitArrowStyle{#1}
+	\umlGetAssoziationDifferences{#4\arabic{umlenvironmentcounter}}{#5\arabic{umlenvironmentcounter}}
+	\ifthenelse{\lengthtest{\umlAssoziationXDiff>\umlAssoziationYDiff}}{
+		\draw[\umlArrowStyle] (#4\arabic{umlenvironmentcounter}) -- (#5\arabic{umlenvironmentcounter}) node [very near start, above] (TextNode) [above=\the\umlMultiplicityDistance] {#2} node [very near end, above] (TextNode) [above=\the\umlMultiplicityDistance] {#3};
+	}{
+		\draw[\umlArrowStyle] (#4\arabic{umlenvironmentcounter}) -- (#5\arabic{umlenvironmentcounter}) node [very near start, left] (TextNode) [left=\the\umlMultiplicityDistance] {#2} node [very near end, left] (TextNode) [left=\the\umlMultiplicityDistance] {#3};
+	}	
+}
